tests/negative/test_owning_tup_asgn_owning.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc main () () {
    sym f0:(Foo Foo) f1:(Foo Foo);
    = f0 f1;
};